fix: cards image display on mobile

--- a/styles.css
+++ b/styles.css
@@ -307,18 +307,28 @@ a {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
-.cards-list__item__cover {
+.cards-list__item__cover-wrapper {
+  position: relative;
   display: block;
   overflow: hidden;
   height: 112px;
+  min-height: 112px;
   line-height: 0;
   border-radius: 20px 20px 0 0;
+}
+
+.cards-list__item__cover {
+  display: block;
+  width: 100%;
+  height: 100%;
+  line-height: 0;
 }
 
 .cards-list__item__cover > img {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  aspect-ratio: 1 / 1;
 }
 
 .cards-list__item__content {
@@ -356,6 +366,7 @@ a {
 
 .cards-list__item__stars::before {
   position: absolute;
+  z-index: 0;
   top: 0;
   left: 0;
   visibility: visible;
@@ -365,6 +376,7 @@ a {
 
 .cards-list__item__stars::after {
   position: absolute;
+  z-index: 1;
   top: 0;
   left: 0;
   visibility: visible;
@@ -405,9 +417,9 @@ a {
   padding: 6px 16px;
 }
 
-.cards-list__item--paysage .cards-list__item__cover {
+.cards-list__item--paysage .cards-list__item__cover-wrapper {
   flex: 0 0 136px;
-  min-height: 112px;
+  height: auto;
   border-radius: 20px 0 0 20px;
 }
 
